--- a/exercicios/ex026/mq05/estilos/style.css
+++ b/exercicios/ex026/mq05/estilos/style.css
@@ -14,13 +14,27 @@ header {
     background-color: rgb(148, 148, 148);
 }
 
+span#burger {
+    background-color: rgb(48, 48, 48);
+    color: white;
+    display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#burger:hover {
+    background-color: white;
+    color: black;
+}
+
 header > h1 {
     padding: 10px;
     text-align: center;
 }
 
 menu {
-    display: block;
+    display: none;
 }
 
 menu > ul {
